--- a/Test.ioc
+++ b/Test.ioc
@@ -39,6 +39,8 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -107,7 +109,9 @@ RCC.VCOOutput2Freq_Value=8000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period
+TIM2.ICFilter_CH1=15
+TIM2.ICPrescaler-Input_Capture1_from_TI1=TIM_ICPSC_DIV1
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,ICFilter_CH1,ICPrescaler-Input_Capture1_from_TI1
 TIM2.Period=65000
 TIM2.Prescaler=71
 USART1.IPParameters=VirtualMode
