--- a/Belt_ctrl_and_analyzer.ioc
+++ b/Belt_ctrl_and_analyzer.ioc
@@ -111,8 +111,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Belt_crtl_and_PWM_analyzer.ioc
-ProjectManager.ProjectName=Belt_crtl_and_PWM_analyzer
+ProjectManager.ProjectFileName=Belt_ctrl_and_analyzer.ioc
+ProjectManager.ProjectName=Belt_ctrl_and_analyzer
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
@@ -157,8 +157,9 @@ TIM1.Prescaler=71
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
 TIM2.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Period,ICPolarity_CH2
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Period,ICPolarity_CH2,Prescaler
 TIM2.Period=50000
+TIM2.Prescaler=8
 TIM3.IPParameters=Prescaler,Period
 TIM3.Period=1000
 TIM3.Prescaler=71
